--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const latestNews = (await getCollection('news'))
 			<header class="hero">
 				<Hero
 					title="Pavlo Hrab"
-					tagline="(Marine) Bioinformatics Researcher | Ph.D. Candidate"
+					tagline="(Marine) Bioinformatics Researcher | PhD Candidate"
 					align="start"
 				>
 					<div class="intro-text">
