Smaller padding for mobile after navbar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -213,7 +213,8 @@ const latestNews = (await getCollection('news'))
 	@media (max-width: 50em) {
 		.hero {
 			gap: 1.5rem;
-			padding-block: 0.25rem;
+			padding-top: 0;
+			padding-bottom: 0.5rem;
 		}
 	}
 
